Recieving messages from 1c

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </service>
         <service
             android:name=".sync.LikeWorkSyncService"
-            android:exported="true" >
+            android:exported="false" >
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
@@ -71,11 +71,11 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                <category android:name="com.example.gbyakov.likework.app" />
+                <category android:name="com.example.gbyakov.likework" />
             </intent-filter>
         </receiver>
         <service
-            android:name="gcm.GcmListenerService"
+            android:name=".gcm.GCMListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
